<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/Titulo"
        android:textSize="20sp"
        android:textColor="@color/blue"
        android:gravity="center" />

<LinearLayout
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/To"
        android:textSize="20sp" />

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/eTo"/>

</LinearLayout>

    <EditText
        android:layout_height="wrap_content"
        android:text="@string/Subject"
        android:layout_width="match_parent"
        android:id="@+id/eSubject"/>

    <EditText
        android:layout_height="wrap_content"
        android:text="@string/Message"
        android:layout_width="match_parent"
        android:id="@+id/eMessage"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Send"
        android:id="@+id/bSend"/>
</LinearLayout>